[package]
name = "kommitted"
version = "0.1.1"
edition = "2021"
authors = [
    "Ivan De Marino <detronizator@gmail.com>",
    "Ivan De Marino <ivan.de.marino@gmail.com>",
    "Kafkesc <https://github.com/kafkesc>",
]
repository = "https://github.com/kafkesc/kommitted"
homepage = "https://github.com/kafkesc/kommitted"
description = "Measure Kafka Consumer Offset Lag and Time Lag"
license = "MIT OR Apache-2.0"
keywords = ["kafka", "consume", "lag", "monitoring", "performance"]
categories = [
    "command-line-utilities",
    "development-tools",
    "visualization",
]
exclude = [
    ".github/",
    ".gitignore",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["http2"] }
chrono = "0.4.26"
clap = { version = "4.4.0", features = ["derive", "deprecated", "env", "wrap_help"] }
const_format = "0.2.31"
ctrlc = { version = "3.4.0", features = ["termination"] }
env_logger = "0.10.0"
exit-code = "1.0.0"
hyper = { version = "0.14.27", features = ["http1", "http2", "server", "runtime", "tcp"] }
konsumer_offsets = { version = "0.3.0", default-features = false, features = ["ts_chrono"] }
log = "0.4.20"
prometheus = "0.13.3"
regex = "1.9.4"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
tokio-util = "0.7.8"

[target.'cfg(unix)'.dependencies]
rdkafka = { version = "0.34.0", features = ["ssl-vendored", "gssapi-vendored", "libz-static"] }

[profile.release]
strip = true # Automatically strip symbols from the binary.
lto = true   # Link time optimization - see https://llvm.org/docs/LinkTimeOptimization.html.
