[package]
name = "kommitted"
version = "0.2.2"
edition = "2021"
authors = [
    "Ivan De Marino <detronizator@gmail.com>",
    "Ivan De Marino <ivan.de.marino@gmail.com>",
    "Kafkesc <https://github.com/kafkesc>",
]
repository = "https://github.com/kafkesc/kommitted"
homepage = "https://github.com/kafkesc/kommitted"
description = "Measure Kafka Consumer Offset Lag and Time Lag"
license = "MIT OR Apache-2.0"
keywords = ["kafka", "consume", "lag", "monitoring", "performance"]
categories = [
    "command-line-utilities",
    "development-tools",
    "visualization",
]
exclude = [
    ".github/",
    ".gitignore",
    "Dockerfile",
    "CHANGELOG_GUIDANCE.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = { version = "0.7.3", features = ["http2"] }
chrono = "0.4.31"
clap = { version = "4.4.13", features = ["derive", "deprecated", "env", "wrap_help"] }
const_format = "0.2.32"
ctrlc = { version = "3.4.2", features = ["termination"] }
env_logger = "0.10.1"
exit-code = "1.0.0"
hyper = { version = "1.1.0", features = ["http1", "http2", "server"] }
konsumer_offsets = { version = "0.3.0", default-features = false, features = ["ts_chrono"] }
log = "0.4.20"
prometheus = "0.13.3"
regex = "1.10.2"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }
tokio-util = "0.7.10"
tower-http = { version = "0.5", features = ["timeout"] }

[target.'cfg(unix)'.dependencies]
rdkafka = { version = "0.36.0", features = ["ssl-vendored", "gssapi-vendored", "libz-static"] }

[profile.release]
strip = true # Automatically strip symbols from the binary.
lto = true   # Link time optimization - see https://llvm.org/docs/LinkTimeOptimization.html.
